added EventResolvedMessage with details about point; changed the packages structure a little bit